[tool.poetry]
name = "docintelligent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.34.2"
ollama = "^0.6.2"
fastapi = "^0.136.3"
chromadb = "^1.5.9"
llama-index = "^0.14.22"
llama-index-vector-stores-chroma = "^0.5.5"
docling = "^2.101.0"
pyarrow = "^24.0.0"
llama-index-embeddings-huggingface = "^0.7.0"
python-multipart = "^0.0.32"
streamlit = "^1.58.0"
pandas = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
